--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: "Oswald";
+    font-family: "QTGraveure";
     src: url("../public/fonts/QTGraveure.otf.ttf");
 }
