--- a/resources/js/shop/App.css
+++ b/resources/js/shop/App.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "QTGraveure";
+  src: url("/public/fonts/QTGraveure-Bold.otf") format('opentype');
+}
